--- a/input/raw.html
+++ b/input/raw.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>enyo onyx test</title>
-	<link href="css/Input.css" rel="stylesheet">
+	<link href="source/Input.css" rel="stylesheet">
 </head>
 <body>
 	<div class="enyo-input-decorator focused">
