--- a/input/index.html
+++ b/input/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>enyo onyx test</title>
-	<script src="../../../../enyo/enyo.js" type="text/javascript"></script>
+	<script src="../../../enyo/enyo.js" type="text/javascript"></script>
 	<script src="source/package.js" type="text/javascript"></script>
 </head>
 <body>
