use css3 selectors for state handling

--- a/button/raw.html
+++ b/button/raw.html
@@ -5,12 +5,13 @@
 	<link href="source/Button.css" rel="stylesheet">
 </head>
 <body>
-	<!--<div class="enyo-input-decorator focused">
-		<div class="enyo-input">Hello World</div>
-	</div>-->
-	<div class="enyo-button">
+	<div class="enyo-button-decorator">
 		<button>Hello World</button>
 	</div>
 	<button class="enyo-button">Hello World</button>
+	<div class="enyo-button-decorator">
+		<button disabled="true">Hello World</button>
+	</div>
+	<button class="enyo-button" disabled="true">Hello World</button>
 </body>
 </html>
