--- a/button/raw.html
+++ b/button/raw.html
@@ -8,10 +8,8 @@
 	<div class="enyo-button-decorator">
 		<button>Hello World</button>
 	</div>
-	<button class="enyo-button">Hello World</button>
-	<div class="enyo-button-decorator">
-		<button disabled="true">Hello World</button>
+	<div class="enyo-button-decorator" disabled="true">
+		<button>Hello World</button>
 	</div>
-	<button class="enyo-button" disabled="true">Hello World</button>
 </body>
 </html>
