--- a/button/raw.html
+++ b/button/raw.html
@@ -5,11 +5,7 @@
 	<link href="source/Button.css" rel="stylesheet">
 </head>
 <body>
-	<div class="enyo-button-decorator">
-		<button>Hello World</button>
-	</div>
-	<div class="enyo-button-decorator" disabled="true">
-		<button>Hello World</button>
-	</div>
+	<button class="onyx-button">Hello World</button>
+	<button class="onyx-button" disabled="disabled">Hello World</button>
 </body>
 </html>
