--- a/input/index.html
+++ b/input/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>enyo onyx test</title>
 	<script src="../../../enyo/enyo.js" type="text/javascript"></script>
+	<script src="../../base-ui/package.js" type="text/javascript"></script>
 	<script src="source/package.js" type="text/javascript"></script>
 </head>
 <body>
@@ -11,23 +12,28 @@
 			name: "App",
 			kind: "Control",
 			components: [
-				{content: "InputDecorator with an input inside it; input styling is auto (how?):", style: "margin: 10px;"},
+				{content: "InputDecorator and input with placeholder", style: "margin: 10px;"},
+				{kind: "onyx.InputDecorator", components: [
+					{kind: "onyx.Input", attributes: {placeholder: "Enter text here"}}
+				]},
+				{content: "InputDecorator with a disabled input inside it", style: "margin: 10px;"},
 				{tag: "hr"},
-				{kind: "InputDecorator", components: [
-					{kind: "Input", value: "Hello World"}
+				{kind: "onyx.InputDecorator", components: [
+					{kind: "onyx.Input", disabled: true, value: "Hello World"}
+				]},
+				{content: "InputDecorator with a focused input inside it", style: "margin: 10px;"},
+				{tag: "hr"},
+				{kind: "onyx.InputDecorator", components: [
+					{kind: "onyx.Input", defaultFocus: true, value: "Hello World"}
 				]},
 				{content: "InputDecorator with some stuff inside it", style: "margin: 10px;"},
 				{tag: "hr"},
-				{kind: "InputDecorator", components: [
+				{kind: "onyx.InputDecorator", components: [
 					{content: "Left stuff: "},
-					{kind: "Input", value: "Hello World"},
+					{kind: "onyx.Input", value: "Hello World"},
 					{content: " and right stuff..."},
 				]}
-			],
-			rendered: function() {
-				this.inherited(arguments);
-				this.$.input.focus();
-			}
+			]
 		}))().write();
 	</script>
 </body>
