--- a/togglebutton/index.html
+++ b/togglebutton/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<script src="../../../enyo/enyo.js" type="text/javascript"></script>
 	<script src="source/package.js" type="text/javascript"></script>
+	<link href="../css/onyx.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 	<script>
