* Input: attempt to style without border-image.

--- a/input/index.html
+++ b/input/index.html
@@ -14,7 +14,7 @@
 			components: [
 				{content: "InputDecorator and input with placeholder", style: "margin: 10px;"},
 				{kind: "onyx.InputDecorator", components: [
-					{kind: "onyx.Input", attributes: {placeholder: "Enter text here"}}
+					{kind: "onyx.Input", placeholder: "Enter text here"}
 				]},
 				{content: "InputDecorator with a disabled input inside it", style: "margin: 10px;"},
 				{tag: "hr"},
