* Toolbar: attempt to style input without border image.

--- a/toolbar/index.html
+++ b/toolbar/index.html
@@ -32,6 +32,14 @@
 					]},
 					{kind: "onyx.Button", content: "Bahtun"}
 				]},
+				{tag: "br"},{tag: "br"},
+				{kind: "onyx.Toolbar", classes: "onyx-light", components: [
+					{content: "Toolbar with stuff in it: &nbsp;"},
+					{kind: "onyx.InputDecorator", components: [
+						{kind: "onyx.Input", value: "Hi"}
+					]},
+					{kind: "onyx.Button", content: "Bahtun"}
+				]},
 			]
 		}))().write();
 	</script>
