--- a/examples/Settings/index.html
+++ b/examples/Settings/index.html
@@ -13,6 +13,7 @@
 	<script src="../../togglebutton/source/package.js" type="text/javascript"></script>
 	<script src="../../checkbox/source/package.js" type="text/javascript"></script>
 	<script src="../../groupbox/source/package.js" type="text/javascript"></script>
+	<script src="../../input/source/package.js" type="text/javascript"></script>
 	<!-- -->
 	<script src="App.js" type="text/javascript"></script>
 	<!-- -->
@@ -43,7 +44,7 @@
 </head>
 <body>
 <script type="text/javascript">
-	new App({classes: "enyo-fit enyo-unselectable"}).write();
+	new App({classes: "enyo-fit onyx enyo-unselectable"}).write();
 </script>
 </body>
 </html>
