add 'GroupItem' interface to Checkbox and ToggleButton, various styling tweaks

--- a/examples/OnyxMatters/index.html
+++ b/examples/OnyxMatters/index.html
@@ -8,10 +8,7 @@
 	<script src="../../../../enyo/enyo.js" type="text/javascript"></script>
 	<script src="../../../base-ui/package.js" type="text/javascript"></script>
 	<!-- -->
-	<link href="../../css/onyx.css" rel="stylesheet" type="text/css" />
-	<script src="../../button/source/package.js" type="text/javascript"></script>
-	<script src="../../toolbar/source/package.js" type="text/javascript"></script>
-	<script src="../../togglebutton/source/package.js" type="text/javascript"></script>
+	<script src="../../package.js" type="text/javascript"></script>
 	<!-- -->
 	<script src="App.js" type="text/javascript"></script>
 	<!-- -->
