--- a/examples/Settings/index.html
+++ b/examples/Settings/index.html
@@ -14,6 +14,7 @@
 	<script src="../../checkbox/source/package.js" type="text/javascript"></script>
 	<script src="../../groupbox/source/package.js" type="text/javascript"></script>
 	<script src="../../input/source/package.js" type="text/javascript"></script>
+	<script src="../../button/source/package.js" type="text/javascript"></script>
 	<!-- -->
 	<script src="App.js" type="text/javascript"></script>
 	<!-- -->
@@ -36,8 +37,8 @@
 		.onyx-groupbox-item > * {
 			display: inline-block;
 		}
-		/* make the last control inside item to be right-aligned */
-		.onyx-groupbox-item :last-child {
+		/* make the 2nd control inside item to be right-aligned */
+		.onyx-groupbox-item :nth-child(2) {
 			float: right;
 		}
 	</style>
