--- a/examples/Settings/index.html
+++ b/examples/Settings/index.html
@@ -8,13 +8,7 @@
 	<script src="../../../../enyo/enyo.js" type="text/javascript"></script>
 	<script src="../../../base-ui/package.js" type="text/javascript"></script>
 	<!-- -->
-	<link href="../../css/onyx.css" rel="stylesheet" type="text/css" />
-	<script src="../../toolbar/source/package.js" type="text/javascript"></script>
-	<script src="../../togglebutton/source/package.js" type="text/javascript"></script>
-	<script src="../../checkbox/source/package.js" type="text/javascript"></script>
-	<script src="../../groupbox/source/package.js" type="text/javascript"></script>
-	<script src="../../input/source/package.js" type="text/javascript"></script>
-	<script src="../../button/source/package.js" type="text/javascript"></script>
+	<script src="../../../onyx/package.js" type="text/javascript"></script>
 	<!-- -->
 	<script src="App.js" type="text/javascript"></script>
 	<!-- -->
