--- a/examples/samples/button.html
+++ b/examples/samples/button.html
@@ -1,9 +1,9 @@
 ﻿<!doctype html>
 <html>
 <head>
-	<title>enyo onyx test</title>
-	<script src="../../../enyo/enyo.js" type="text/javascript"></script>
-	<script src="source/package.js" type="text/javascript"></script>
+	<title>onyx button sample</title>
+	<script src="../../../../enyo/enyo.js" type="text/javascript"></script>
+	<script src="../../../onyx/package.js" type="text/javascript"></script>
 </head>
 <body>
 	<script>
