--- a/examples/samples/groupbox.html
+++ b/examples/samples/groupbox.html
@@ -1,12 +1,9 @@
 ﻿<!doctype html>
 <html>
 <head>
-	<title>enyo onyx test</title>
-	<script src="../../../enyo/enyo.js" type="text/javascript"></script>
-	<script src="../../base-ui/package.js" type="text/javascript"></script>
-	<script src="../input/source/package.js" type="text/javascript"></script>
-	<script src="source/package.js" type="text/javascript"></script>
-	<link href="../css/onyx.css" rel="stylesheet" type="text/css" />
+	<title>onyx groupbox sample</title>
+	<script src="../../../../enyo/enyo.js" type="text/javascript"></script>
+	<script src="../../../onyx/package.js" type="text/javascript"></script>
 </head>
 <body>
 	<script>
