--- a/examples/samples/input.html
+++ b/examples/samples/input.html
@@ -1,10 +1,9 @@
 ﻿<!doctype html>
 <html>
 <head>
-	<title>enyo onyx test</title>
-	<script src="../../../enyo/enyo.js" type="text/javascript"></script>
-	<script src="../../base-ui/package.js" type="text/javascript"></script>
-	<script src="source/package.js" type="text/javascript"></script>
+	<title>onyx input sample</title>
+	<script src="../../../../enyo/enyo.js" type="text/javascript"></script>
+	<script src="../../../onyx/package.js" type="text/javascript"></script>
 </head>
 <body>
 	<script>
