--- a/examples/samples/popup.html
+++ b/examples/samples/popup.html
@@ -1,12 +1,9 @@
 ﻿<!doctype html>
 <html>
 <head>
-	<title>enyo onyx test</title>
-	<script src="../../../enyo/enyo.js" type="text/javascript"></script>
-	<script src="../../base-ui/package.js" type="text/javascript"></script>
-	<script src="../button/source/package.js" type="text/javascript"></script>
-	<script src="source/package.js" type="text/javascript"></script>
-	<link href="../css/onyx.css" rel="stylesheet" type="text/css" />
+	<title>onyx popup sample</title>
+	<script src="../../../../enyo/enyo.js" type="text/javascript"></script>
+	<script src="../../../onyx/package.js" type="text/javascript"></script>
 	<style>
 			.spacify {
 				margin-right: 3px;
