--- a/examples/samples/radio.html
+++ b/examples/samples/radio.html
@@ -1,12 +1,9 @@
 ﻿<!doctype html>
 <html>
 <head>
-	<title>enyo onyx test</title>
-	<script src="../../../enyo/enyo.js" type="text/javascript"></script>
-	<!-- -->
-	<script src="../../base-ui/package.js" type="text/javascript"></script>
-	<!-- -->
-	<script src="../package.js" type="text/javascript"></script>
+	<title>onyx radio sample</title>
+	<script src="../../../../enyo/enyo.js" type="text/javascript"></script>
+	<script src="../../../onyx/package.js" type="text/javascript"></script>
 	<!-- -->
 	<style>
 		html, body {
