--- a/examples/samples/togglebutton.html
+++ b/examples/samples/togglebutton.html
@@ -3,9 +3,9 @@
 <head>
 	<title>ToggleButton test</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<script src="../../../enyo/enyo.js" type="text/javascript"></script>
-	<script src="source/package.js" type="text/javascript"></script>
-	<link href="../css/onyx.css" rel="stylesheet" type="text/css" />
+	<title>onyx togglebutton sample</title>
+	<script src="../../../../enyo/enyo.js" type="text/javascript"></script>
+	<script src="../../../onyx/package.js" type="text/javascript"></script>
 </head>
 <body>
 	<script>
