--- a/examples/OnyxMatters/index.html
+++ b/examples/OnyxMatters/index.html
@@ -7,7 +7,7 @@
 	<!-- -->
 	<script src="../../../../enyo/enyo.js" type="text/javascript"></script>
 	<!-- -->
-	<script src="../../onyx/package.js" type="text/javascript"></script>
+	<script src="../../../onyx/package.js" type="text/javascript"></script>
 	<!-- -->
 	<script src="App.js" type="text/javascript"></script>
 	<!-- -->
