* correct styling that broke due to removal of onyx-groupbox-item class.

--- a/examples/Settings/index.html
+++ b/examples/Settings/index.html
@@ -21,16 +21,16 @@
 		.main > * {
 			padding: 20px;
 		}
-		.onyx-groupbox-item {
+		.groupbox-item {
 			padding: 10px;
 			min-height: 30px;
 			line-height: 30px;
 		}
-		.onyx-groupbox-item > * {
+		.groupbox-item > * {
 			display: inline-block;
 		}
 		/* make the 2nd control inside item to be right-aligned */
-		.onyx-groupbox-item :nth-child(2) {
+		.groupbox-item :nth-child(2) {
 			float: right;
 		}
 	</style>
