* Settings: modified to use FittableRows and a Scroller.

--- a/examples/Settings/index.html
+++ b/examples/Settings/index.html
@@ -7,10 +7,16 @@
 	<!-- -->
 	<script src="../../../../enyo/enyo.js" type="text/javascript"></script>
 	<script src="../../../onyx/package.js" type="text/javascript"></script>
+	<script src="../../../layout/fittable/package.js" type="text/javascript"></script>
 	<!-- -->
 	<script src="App.js" type="text/javascript"></script>
 	<!-- -->
 	<style>
+
+		body {
+			overflow: hidden;
+		}
+
 		.align-center {
 			text-align: center;
 		}
