update ToggleButton to use the version that doesn't use border-image

--- a/examples/samples/togglebutton.html
+++ b/examples/samples/togglebutton.html
@@ -14,6 +14,7 @@
 			classes: "enyo-unselectable",
 			components: [
 				{kind: "onyx.ToggleButton", value: true},
+				{kind: "onyx.ToggleButton", value: true, onContent: "&nbsp", offContent: "&nbsp"},
 				{kind: "onyx.ToggleButton", onContent: "Yes", offContent: "No"},
 				{kind: "onyx.ToggleButton", value: true, disabled: true},
 				{kind: "onyx.ToggleButton", disabled: true}
