Fix spelling of "Attachments" in email sample

--- a/examples/Mail/index.html
+++ b/examples/Mail/index.html
@@ -127,7 +127,7 @@
 							]},
 							{content: "From", style: "padding: 8px;"},
 							{content: "Subject", style: "padding: 8px;"},
-							{content: "Attachmentes", style: "padding: 8px;"},
+							{content: "Attachments", style: "padding: 8px;"},
 							{fit: true, kind: "Scroller", style: "border: 3px solid orange;", components: [
 								{name: "mailBody", style: "xfont-size: 50px; line-height: normal;"}
 							]}
