--- a/examples/Settings/index.html
+++ b/examples/Settings/index.html
@@ -35,8 +35,8 @@
 		.groupbox-item > * {
 			display: inline-block;
 		}
-		/* make the 2nd control inside item to be right-aligned */
-		.groupbox-item :nth-child(2) {
+		/* right-align the last control inside item */
+		.groupbox-item :last-child {
 			float: right;
 		}
 	</style>
