--- a/examples/browser/index.html
+++ b/examples/browser/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Onyx browser example</title>
+	<title>Onyx Browser</title>
 	<!-- -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<!-- -->
@@ -13,10 +13,9 @@
 	<!-- -->
 	<style>
 		body {
-			/* to avoid get incorrect layout due to scrollbar appearing */
+			/* avoid incorrect layout due to scrollbar appearing */
 			overflow: hidden;
 		}
-
 		.frame {
 			position: absolute;
 			height: 100%;
