--- a/examples/maps/index.html
+++ b/examples/maps/index.html
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html>
 <head>
-	<title>enyo Bing Maps</title>
+	<title>Onyx Map (Bing)</title>
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="viewport" content="width=device-width initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<script src="../../../../enyo/enyo.js" type="text/javascript"></script>
@@ -9,7 +9,7 @@
 </head>
 <body>
 <script type="text/javascript">
-	new MapsApp().renderInto(document.body);
+	new MapsApp({classes: "enyo-fit enyo-unselectable"}).write();
 </script>
 </body>
 </html>
