--- a/examples/reminders/index.html
+++ b/examples/reminders/index.html
@@ -7,7 +7,7 @@
 	<script src="../../../../enyo/enyo.js" type="text/javascript"></script>
 	<script src="package.js" type="text/javascript"></script>
 </head>
-<body>
+<body class="onyx">
 <script type="text/javascript">
 	new App().renderInto(document.body);
 </script>
