--- a/examples/OnyxMatters/index.html
+++ b/examples/OnyxMatters/index.html
@@ -15,33 +15,14 @@
 		.tools > * {
 			margin: 3px;
 		}
-		.group {
-			/*
-			margin: 8px;
-			padding: 4px;
-			border: 1px solid lightblue;
-			*/
-		}
 		.divider {
 			color: #F49200;
 			text-transform: uppercase;
-			font-family: Segoe UI, Prelude Medium, sans;
+			font-family: Segoe UI, Prelude Medium, Helvetica, Verdana, sans-serif;
 			font-size: 14px;
 			font-weight: bold;
-			Xborder-bottom: 1px solid #F49200;
 			margin-bottom: 8px;
 		}
-		.XXbar {
-			padding: 9px 8px 10px 8px;
-			border: 1px solid black;
-			background: #4C4C4C url(../../images/gradient.png) repeat-x 0 10px;
-			color: white;
-		}
-		/*
-		.bar .enyo-fittable-flex {
-			height: 100%;
-		}
-		*/
 		.bar > div > div > * {
 			vertical-align: middle;
 			margin: 0 6px;
