--- a/examples/samples/popup.html
+++ b/examples/samples/popup.html
@@ -4,136 +4,106 @@
 	<title>onyx popup sample</title>
 	<script src="../../../../enyo/enyo.js" type="text/javascript"></script>
 	<script src="../../../onyx/package.js" type="text/javascript"></script>
-	<style>
-			.spacify {
-				margin-right: 3px;
-			}
-
-
-	</style>
 </head>
 <body>
 	<script>
-		// return the offset of a node (even supported in IE8)
-		enyo.dom.calcNodeOffset = function(inNode) {
-			if (inNode.getBoundingClientRect) {
-				var o = inNode.getBoundingClientRect();
-				return {
-					left: o.left + (window.pageXOffset || document.body.scrollLeft),
-					top: o.top + (window.pageYOffset || document.body.scrollTop),
-					width: o.width || (o.right - o.left),
-					height: o.height|| (o.bottom - o.top)
-				}
-			}
-			return {left: 0, top: 0, width: 0, height: 0};
-		}
-		//
 		new (enyo.kind({
 			name: "App",
 			kind: "Control",
 			classes: "onyx enyo-fit",
 			components: [
-				{kind: "Scroller", components: [
-					{style: "height: 100px;"},
-					{kind: "onyx.Button", classes: "spacify", content: "Popup!", ontap: "showPopup"},
-					{name: "floatingPopup", kind: "onyx.Popup", floating: true, ontap: "floatTap", classes: "enyo-fit", style: "background: white; font-size: 200px;", content: "Popup!!!"},
-					// FIXME: if the popup is inside the button, then the :active css state of the button
-					// gets triggered when you tap on the popup
-					/*
-					{kind: "onyx.Button", classes: "popup-button", components: [
-						// vertical-align: middle makes this button 1px taller than normal! wtf.
-						{content: "Menu", style: "vertical-align: top;", ontap: "showMenu"},
-						{name: "menu", kind: "onyx.Popup", classes: "menu", ontap: "squelch", onmousedown: "squelch", components: [
-							{content: "1"},
-							{content: "2"},
-							{content: "3"},
-						]}
-					]}
-					*/
-					{kind: "onyx.MenuDecorator", classes: "spacify", components: [
-						{content: "Choose wisely..."},
+				{style: "padding: 10px;", content: "Some popups in a toolbar:"},
+				{kind: "onyx.Toolbar", classes: "onyx-menu-toolbar", components: [
+					{kind: "onyx.TooltipDecorator", components: [
+						{kind: "onyx.Button", content: "Tooltip"},
+						{kind: "onyx.Tooltip", content: "I'm a tooltip for a button."}
+					]},
+					{kind: "onyx.TooltipDecorator", components: [
+						{kind: "onyx.InputDecorator", components: [
+							{kind: "onyx.Input", placholder: "Just an input..."}
+						]},
+						{kind: "onyx.Tooltip", content: "I'm a tooltip for an input."}
+					]},
+					{kind: "onyx.MenuDecorator", components: [
+						{content: "Bookmarks menu"},
+						{kind: "onyx.Tooltip", content: "Tap to open..."},
 						{kind: "onyx.Menu", components: [
-							{content: "1"},
-							{content: "2"},
+							{components: [
+								{kind: "onyx.IconButton", src: "menu-icon-bookmark.png"},
+								{content: "Bookmarks"}
+							]},
+							{content: "Favorites"},
 							{classes: "onyx-menu-divider"},
-							{content: "3"},
+							{content: "Recents"},
 						]}
 					]},
-					//{kind: "onyx.MenuDecorator", classes: "spacify", components: [
-						{name: "floatingMenuButton", kind: "onyx.MenuButton", classes: "spacify", content: "Floating...", ontap: "showFloatingMenu", menu: "floatingMenu"},
-						{name: "floatingMenu", kind: "onyx.Menu", onHide: "floatingMenuHide", classes: "onyx", style: "z-index: 1", floating: true, button: "floatingMenuButton", components: [
-							{content: "1"},
-							{content: "2"},
-							{classes: "onyx-menu-divider"},
-							{content: "3"},
-						]},
-					//]},
-					{name: "floatingMenuButton2", kind: "onyx.MenuButton", classes: "spacify", content: "Floating (scrim)...", ontap: "showScrimmedFloatingMenu", menu: "floatingMenu2"},
-						{name: "floatingMenu2", kind: "onyx.Menu", onHide: "floatingMenuHide", classes: "onyx", style: "z-index: 1", floating: true, button: "floatingMenuButton2", components: [
-							{content: "1"},
-							{content: "2"},
-							{classes: "onyx-menu-divider"},
-							{content: "3"},
-						]},
-					{name: "scrim", kind: "onyx.Popup", floating: true, classes: "enyo-fit", style: "background: rgba(0,0,0,0.3);"},
-					{kind: "onyx.MenuDecorator", classes: "spacify", components: [
-						{content: "Scrolling"},
+					{kind: "onyx.MenuDecorator", components: [
+						{kind: "onyx.IconButton", src: "menu-icon-bookmark.png"},
+						{kind: "onyx.Tooltip", content: "Bookmarks menu"},
 						{kind: "onyx.Menu", components: [
-							// FIXME: scroller can also be max-height, but this must be applied to the innermost control so need a direct api.
-							{kind: "enyo.Scroller", defaultKind: "onyx.MenuItem", 
-								classes: "enyo-unselectable", style: "height: 200px;", strategyKind: "TouchScrollStrategy", components: [
+							{components: [
+								{kind: "onyx.IconButton", src: "menu-icon-bookmark.png"},
+								{content: "Bookmarks"}
+							]},
+							{content: "Favorites"},
+							{classes: "onyx-menu-divider"},
+							{content: "Recents"},
+						]}
+					]}
+				]},
+				{kind: "Scroller", classes: "enyo-fit", style: "top: 130px;", components: [
+					{style: "height: 100px; padding: 10px;", content: "Some popups in a scrolling region:"},
+					{classes: "onyx-toolbar-inline", components: [
+						{kind: "onyx.Button", content: "Popup...", ontap: "showPopup", popup: "popup"},
+						{name: "popup", kind: "onyx.Popup", centered: true, floating: true, ontap: "floatTap", style: "font-size: 200px;", content: "Popup!!!"},
+						{kind: "onyx.Button", content: "Modal Popup...", ontap: "showPopup", popup: "modalPopup"},
+						{name: "modalPopup", kind: "onyx.Popup", centered: true, modal: true, floating: true, ontap: "floatTap", style: "font-size: 200px;", content: "Popup!!!"},
+						{kind: "onyx.MenuDecorator", components: [
+							{content: "Popup menu"},
+							{kind: "onyx.Menu", components: [
 								{content: "1"},
 								{content: "2"},
 								{classes: "onyx-menu-divider"},
 								{content: "3"},
-								{content: "4"},
-								{content: "5"},
-								{classes: "onyx-menu-divider"},
-								{content: "6"},
-								{content: "7"},
 							]}
-						]}
-					]},
-					// FIXME: need to work split button out...
-					{kind: "onyx.MenuDecorator", classes: "spacify", components: [
-						{content: "Button", kind: "onyx.Button", onActivate: "squelch", style: "border-radius: 3px 0 0 3px;"},
-						{content: "*", style: "border-radius: 0 3px 3px 0;"},
-						{kind: "onyx.Menu", components: [
-							{content: "1"},
-							{content: "2"},
-							{classes: "onyx-menu-divider"},
-							{content: "3"},
+						]},
+						{kind: "onyx.MenuDecorator", components: [
+							{content: "Scrolling Popup menu"},
+							{kind: "onyx.Menu", components: [
+								{kind: "enyo.Scroller", defaultKind: "onyx.MenuItem", classes: "enyo-unselectable", style: "height: 200px;", strategyKind: "TouchScrollStrategy", components: [
+									{content: "1"},
+									{content: "2"},
+									{classes: "onyx-menu-divider"},
+									{content: "3"},
+									{content: "4"},
+									{content: "5"},
+									{classes: "onyx-menu-divider"},
+									{content: "6"},
+									{content: "7"},
+								]}
+							]}
+						]},
+						{kind: "onyx.MenuDecorator", components: [
+							{content: "Split Popup menu", kind: "onyx.Button", onActivate: "preventMenuActivate", style: "border-radius: 3px 0 0 3px;"},
+							{content: "*", style: "border-radius: 0 3px 3px 0;"},
+							{kind: "onyx.Menu", components: [
+								{content: "1"},
+								{content: "2"},
+								{classes: "onyx-menu-divider"},
+								{content: "3"},
+							]}
 						]}
 					]},
 					{style: "height: 1000px;"}
 				]}
 			],
-			showPopup: function() {
-				this.$.floatingPopup.show();
+			showPopup: function(inSender) {
+				var p = this.$[inSender.popup];
+				if (p) {
+					p.show();
+				}
 			},
-			showScrimmedFloatingMenu: function(inSender) {
-				this.$.scrim.show();
-				this.showFloatingMenu(inSender);
-			},
-			showFloatingMenu: function(inSender) {
-				var o = enyo.dom.calcNodeOffset(inSender.hasNode());
-				var m = this.$[inSender.menu];
-				m.addStyles("top: " + (o.top + o.height) + "px; left: " + o.left + "px");
-				m.show();
-			},
-			floatingMenuHide: function(inSender) {
-				this.$.scrim.hide();
-				var b = this.$[inSender.button];
-				b.setActive(false);
-			},
-			floatTap: function(inSender) {
-				inSender.hide();
-				//this.log();
-			},
-			tap: function() {
-				//this.log();
-			},
-			squelch: function() {
+			preventMenuActivate: function() {
 				return true;
 			}
 		}))().write();
