TouchPad_GUI_v3.png moved to internal/lib/onyx; new api tool build; fix fonts in mail

--- a/examples/Mail/index.html
+++ b/examples/Mail/index.html
@@ -32,7 +32,7 @@
 		.divider {
 			background: #E3E4E6 url(../../../../lib/onyx/images/gradient.png) repeat-x bottom;
 			color: #3897E9;
-			font-family: Segoe UI;
+			font-family: Segoe UI, Neue Helvetica, sans-serif;
 			font-size: 16px;
 			font-weight: bold;
 			padding: 10px;
