--- a/examples/Samples/popup.html
+++ b/examples/Samples/popup.html
@@ -5,6 +5,12 @@
 	<script src="../../../../enyo/enyo.js" type="text/javascript"></script>
 	<script src="../../../onyx/package.js" type="text/javascript"></script>
 </head>
+<style>
+	.big {
+		font-size: 30px;
+		padding: 10px;
+	}
+</style>
 <body>
 	<script>
 		new (enyo.kind({
@@ -12,89 +18,11 @@
 			kind: "Control",
 			classes: "onyx enyo-fit",
 			components: [
-				{style: "padding: 10px;", content: "Some popups in a toolbar:"},
-				{kind: "onyx.Toolbar", classes: "onyx-menu-toolbar", components: [
-					{kind: "onyx.TooltipDecorator", components: [
-						{kind: "onyx.Button", content: "Tooltip"},
-						{kind: "onyx.Tooltip", content: "I'm a tooltip for a button."}
-					]},
-					{kind: "onyx.TooltipDecorator", components: [
-						{kind: "onyx.InputDecorator", components: [
-							{kind: "onyx.Input", placholder: "Just an input..."}
-						]},
-						{kind: "onyx.Tooltip", content: "I'm a tooltip for an input."}
-					]},
-					{kind: "onyx.MenuDecorator", components: [
-						{content: "Bookmarks menu"},
-						{kind: "onyx.Tooltip", content: "Tap to open..."},
-						{kind: "onyx.Menu", components: [
-							{components: [
-								{kind: "onyx.IconButton", src: "menu-icon-bookmark.png"},
-								{content: "Bookmarks"}
-							]},
-							{content: "Favorites"},
-							{classes: "onyx-menu-divider"},
-							{content: "Recents"},
-						]}
-					]},
-					{kind: "onyx.MenuDecorator", components: [
-						{kind: "onyx.IconButton", src: "menu-icon-bookmark.png"},
-						{kind: "onyx.Tooltip", content: "Bookmarks menu"},
-						{kind: "onyx.Menu", components: [
-							{components: [
-								{kind: "onyx.IconButton", src: "menu-icon-bookmark.png"},
-								{content: "Bookmarks"}
-							]},
-							{content: "Favorites"},
-							{classes: "onyx-menu-divider"},
-							{content: "Recents"},
-						]}
-					]}
-				]},
-				{kind: "Scroller", classes: "enyo-fit", style: "top: 130px;", components: [
-					{style: "height: 100px; padding: 10px;", content: "Some popups in a scrolling region:"},
-					{classes: "onyx-toolbar-inline", components: [
-						{kind: "onyx.Button", content: "Popup...", ontap: "showPopup", popup: "popup"},
-						{name: "popup", kind: "onyx.Popup", centered: true, floating: true, ontap: "floatTap", style: "font-size: 200px;", content: "Popup!!!"},
-						{kind: "onyx.Button", content: "Modal Popup...", ontap: "showPopup", popup: "modalPopup"},
-						{name: "modalPopup", kind: "onyx.Popup", centered: true, modal: true, floating: true, ontap: "floatTap", style: "font-size: 200px;", content: "Popup!!!"},
-						{kind: "onyx.MenuDecorator", components: [
-							{content: "Popup menu"},
-							{kind: "onyx.Menu", components: [
-								{content: "1"},
-								{content: "2"},
-								{classes: "onyx-menu-divider"},
-								{content: "3"},
-							]}
-						]},
-						{kind: "onyx.MenuDecorator", components: [
-							{content: "Scrolling Popup menu"},
-							{kind: "onyx.Menu", components: [
-								{kind: "enyo.Scroller", defaultKind: "onyx.MenuItem", classes: "enyo-unselectable", style: "height: 200px;", strategyKind: "TouchScrollStrategy", components: [
-									{content: "1"},
-									{content: "2"},
-									{classes: "onyx-menu-divider"},
-									{content: "3"},
-									{content: "4"},
-									{content: "5"},
-									{classes: "onyx-menu-divider"},
-									{content: "6"},
-									{content: "7"},
-								]}
-							]}
-						]},
-						{kind: "onyx.MenuDecorator", components: [
-							{content: "Split Popup menu", kind: "onyx.Button", onActivate: "preventMenuActivate", style: "border-radius: 3px 0 0 3px;"},
-							{content: "*", style: "border-radius: 0 3px 3px 0;"},
-							{kind: "onyx.Menu", components: [
-								{content: "1"},
-								{content: "2"},
-								{classes: "onyx-menu-divider"},
-								{content: "3"},
-							]}
-						]}
-					]},
-					{style: "height: 1000px;"}
+				{classes: "onyx-toolbar-inline", components: [
+					{kind: "onyx.Button", content: "Popup...", ontap: "showPopup", popup: "popup"},
+					{name: "popup", kind: "onyx.Popup", centered: true, floating: true, classes: "big", content: "Popup..."},
+					{kind: "onyx.Button", content: "Modal Popup...", ontap: "showPopup", popup: "modalPopup"},
+					{name: "modalPopup", kind: "onyx.Popup", centered: true, modal: true, floating: true, classes: "big", content: "Modal Popup..."}
 				]}
 			],
 			showPopup: function(inSender) {
@@ -102,9 +30,6 @@
 				if (p) {
 					p.show();
 				}
-			},
-			preventMenuActivate: function() {
-				return true;
 			}
 		}))().write();
 	</script>
