--- a/examples/OnyxSampler/index.html
+++ b/examples/OnyxSampler/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Onyx Style Matters</title>
+	<title>Onyx Widget Sampler</title>
 	<!-- -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<!-- -->
