--- a/examples/OnyxSampler/index.html
+++ b/examples/OnyxSampler/index.html
@@ -12,6 +12,9 @@
 	<script src="App.js" type="text/javascript"></script>
 	<!-- -->
 	<style>
+		body {
+			height: auto;
+		}
 		.tools > * {
 			margin: 3px;
 		}
