use custom gradient for dividers

--- a/examples/Mail/index.html
+++ b/examples/Mail/index.html
@@ -30,7 +30,7 @@
 			box-shadow: -3px 0px 12px rgba(32, 32, 32, 0.3);
 		}
 		.divider {
-			background: #E3E4E6 url(../../../../lib/onyx/images/gradient.png) repeat-x bottom;
+			background: #E3E4E6 url(images/gradient-2.png) repeat-x bottom;
 			color: #3897E9;
 			font-family: Segoe UI, Neue Helvetica, sans-serif;
 			font-size: 16px;
