Move 'preventDocumentScrolling' uber flag setting from App code to index.html

--- a/examples/Maps/index.html
+++ b/examples/Maps/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <script type="text/javascript">
+	enyo.preventDocumentScrolling = true;
 	new MapsApp({classes: "enyo-fit enyo-unselectable"}).write();
 </script>
 </body>
