--- a/examples/Samples/progressbar.html
+++ b/examples/Samples/progressbar.html
@@ -7,24 +7,37 @@
 	<script src="../../../onyx/package.js" type="text/javascript"></script>
 	<script src="../../../onyx/source/ProgressBar.js" type="text/javascript"></script>
 	<script src="../../../onyx/source/Slider.js" type="text/javascript"></script>
+	<script src="../../../onyx/source/ProgressButton.js" type="text/javascript"></script>
 	<link href="../../../onyx/source/css/ProgressBar.css" rel="stylesheet" type="text/css" />
 	<link href="../../../onyx/source/css/Slider.css" rel="stylesheet" type="text/css" />
+	<link href="../../../onyx/source/css/ProgressButton.css" rel="stylesheet" type="text/css" />
 	<style>
 		.tools > * {
 			margin: 8px 20px;
 		}
 	</style>
 </head>
-<body>
+<body class="onyx">
 	<script>
 		new (enyo.kind({
 			name: "App",
 			classes: "enyo-unselectable tools",
 			components: [
 				{tag: "br"},
-				{kind: "onyx.ProgressBar", progress: 10},
+				{kind: "onyx.ProgressBar", progress: 30},
 				{tag: "br"},
-				{kind: "onyx.ProgressBar", progress: 50},
+				{kind: "onyx.ProgressBar", progress: 50, animateStripes: false},
+				{tag: "br"},
+				{kind: "onyx.ProgressButton", progress: 50, components: [
+					{content: "Blue progress..."}
+				]},
+				{kind: "onyx.ProgressButton", classes: "dark", progress: 50, components: [
+					{content: "Dark progress..."}
+				]},
+				{kind: "onyx.ProgressButton", classes: "light", progress: 20, components: [
+					{content: "0"},
+					{content: "100", style: "float: right;"}
+				]},
 				{tag: "br"},
 				{kind: "onyx.Slider", min: 10, max: 50, value: 30},
 				{tag: "br"},
