--- a/examples/Maps/index.html
+++ b/examples/Maps/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
 <script type="text/javascript">
-	enyo.preventDocumentScrolling = true;
-	new MapsApp({classes: "enyo-fit enyo-unselectable"}).write();
+	new MapsApp({fit: true, classes: "enyo-fit enyo-unselectable"}).write();
 </script>
 </body>
 </html>
