update samples to use fit: true instead of enyo.preventDocumentScrolling

--- a/examples/Reminders/index.html
+++ b/examples/Reminders/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="onyx">
 <script type="text/javascript">
-	new App().renderInto(document.body);
+	new App({fit: true}).renderInto(document.body);
 </script>
 </body>
 </html>
