--- a/examples/Settings/index.html
+++ b/examples/Settings/index.html
@@ -12,11 +12,6 @@
 	<script src="App.js" type="text/javascript"></script>
 	<!-- -->
 	<style>
-
-		body {
-			overflow: hidden;
-		}
-
 		.align-center {
 			text-align: center;
 		}
@@ -43,7 +38,7 @@
 </head>
 <body>
 <script type="text/javascript">
-	new App({classes: "enyo-fit onyx enyo-unselectable"}).write();
+	new App({fit: true, classes: "onyx enyo-unselectable"}).write();
 </script>
 </body>
 </html>
