--- a/examples/Browser/index.html
+++ b/examples/Browser/index.html
@@ -12,7 +12,7 @@
 	<script src="App.js" type="text/javascript"></script>
 	<!-- -->
 	<style>
-		body {
+		xbody {
 			/* avoid incorrect layout due to scrollbar appearing */
 			overflow: hidden;
 		}
@@ -26,7 +26,7 @@
 </head>
 <body>
 <script type="text/javascript">
-	new App({classes: "enyo-fit enyo-unselectable"}).write();
+	new App({fit: true, classes: "enyo-fit enyo-unselectable"}).write();
 </script>
 </body>
 </html>
