--- a/examples/OnyxSampler/index.html
+++ b/examples/OnyxSampler/index.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<!-- -->
 	<script src="../../../../enyo/enyo.js" type="text/javascript"></script>
+	<script src="../../../layout/package.js" type="text/javascript"></script>
 	<script src="../../../onyx/package.js" type="text/javascript"></script>
-	<script src="../../../layout/fittable/package.js" type="text/javascript"></script>
 	<!-- -->
 	<script src="App.js" type="text/javascript"></script>
 	<!-- -->
